[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/map_select/MapSelect.gd" type="Script" id=1]
[ext_resource path="res://ui/setup/Camera.gd" type="Script" id=2]
[ext_resource path="res://ui/theme/main.theme" type="Theme" id=3]
[ext_resource path="res://assets/textures/ui/top_left_frame.png" type="Texture" id=5]
[ext_resource path="res://ui/setup/components/dummy/Dummy.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/ui/map_thumbs/dojo.png" type="Texture" id=7]
[ext_resource path="res://ui/components/Back.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/textures/ui/map_back.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/ui/map_thumbs/courtyard_thumb.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/ui/map_thumbs/market_thumb.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/ui/map_thumbs/arena.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 512 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 512 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 256, 10 ), Vector2( 256, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UICanvas:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}

[node name="MapSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
process_mode = 0
script = ExtResource( 2 )

[node name="Fill" type="Polygon2D" parent="."]
color = Color( 0.305882, 0.419608, 0.2, 1 )
offset = Vector2( -256, -144 )
polygon = PoolVector2Array( 0, 0, 512, 0, 512, 288, 0, 288 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 9 )

[node name="YSort" type="YSort" parent="."]

[node name="Map1" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -144, 8 )
label = "Selected"

[node name="Frame" type="Sprite" parent="YSort/Map1"]
position = Vector2( 0, -70 )
texture = ExtResource( 7 )

[node name="Name" type="Label" parent="YSort/Map1/Frame"]
margin_left = -34.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = -7.0
theme = ExtResource( 3 )
text = "Dojo
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map2" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -48, 8 )

[node name="Frame" type="Sprite" parent="YSort/Map2"]
position = Vector2( 0, -70 )
texture = ExtResource( 10 )

[node name="Name" type="Label" parent="YSort/Map2/Frame"]
margin_left = -34.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = -7.0
theme = ExtResource( 3 )
text = "Courtyard
"
align = 1

[node name="Map3" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 48, 8 )

[node name="Frame" type="Sprite" parent="YSort/Map3"]
position = Vector2( 0, -70 )
texture = ExtResource( 11 )

[node name="Name" type="Label" parent="YSort/Map3/Frame"]
margin_left = -34.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = -7.0
theme = ExtResource( 3 )
text = "Market"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map4" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 144, 8 )

[node name="Frame" type="Sprite" parent="YSort/Map4"]
position = Vector2( 0, -70 )
texture = ExtResource( 12 )

[node name="Name" type="Label" parent="YSort/Map4/Frame"]
margin_left = -34.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = -7.0
theme = ExtResource( 3 )
text = "Arena"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 0, 108 )
label = "Play"

[node name="Cancel" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -210, 108 )
label = "Back"

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 0, -200 )

[node name="Shape" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 1 )

[node name="BotWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 200 )

[node name="Shape" type="CollisionShape2D" parent="BotWall"]
shape = SubResource( 1 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( -300, 0 )

[node name="Shape" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 2 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 300, 0 )

[node name="Shape" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="UICanvas" type="CanvasLayer" parent="."]
offset = Vector2( 0, 5 )
transform = Transform2D( 1, 0, 0, 1, 0, 5 )

[node name="UI" type="Control" parent="UICanvas"]
theme = ExtResource( 3 )

[node name="Title" type="Label" parent="UICanvas/UI"]
use_parent_material = true
margin_left = 16.0
margin_top = 8.0
margin_right = 99.0
margin_bottom = 21.0
text = "Map Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="UICanvas/UI"]
margin_left = 16.0
margin_top = 24.0
margin_right = 134.0
margin_bottom = 69.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="UICanvas/UI" instance=ExtResource( 8 )]
margin_right = 496.0
margin_bottom = 44.0

[node name="Anim" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 4 )

[connection signal="activated" from="YSort/Map1" to="." method="_on_Map1_activated"]
[connection signal="activated" from="YSort/Map2" to="." method="_on_Map2_activated"]
[connection signal="activated" from="YSort/Map3" to="." method="_on_Map3_activated"]
[connection signal="activated" from="YSort/Map4" to="." method="_on_Map4_activated"]
[connection signal="activated" from="YSort/Play" to="." method="_on_Play_activated"]
[connection signal="activated" from="YSort/Cancel" to="." method="_on_Cancel_activated"]
[connection signal="clicked" from="UICanvas/UI/Back" to="." method="_on_Back_clicked"]
